// Vitest Snapshot v1

exports[`<PostListTemplate /> > should render with posts 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col overflow-x-hidden"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between max-w-screen-lg ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📑 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <div
        class="max-w-screen-lg mx-auto"
      >
        <section>
          <header
            class="prose text-2xl mx-auto mt-20"
          >
            <h1
              class="text-center mx-auto"
            >
              Articles
            </h1>
          </header>
          <div
            class="ps-max-w-full"
          >
            <section>
              <div
                class="ps-mt-12 ps-grid ps-gap-5 ps-max-w-content ps-mx-auto lg:ps-max-w-screen-lg lg:ps-grid-cols-3"
              >
                <a
                  href="/articles/1"
                >
                  <div
                    class="flex flex-col rounded-lg shadow-lg overflow-hidden cursor-pointer border-2 h-full hover:border-indigo-500"
                  >
                    <div
                      class="flex-shrink-0 relative h-40"
                    >
                      <div
                        class="w-full h-full bg-gradient-to-b from-blue-100 to-blue-500"
                      />
                    </div>
                    <h2
                      class="my-4 mx-6 text-xl leading-7 font-semibold text-gray-900"
                    >
                      Test 1 →
                    </h2>
                  </div>
                </a>
                <a
                  href="/articles/1"
                >
                  <div
                    class="flex flex-col rounded-lg shadow-lg overflow-hidden cursor-pointer border-2 h-full hover:border-indigo-500"
                  >
                    <div
                      class="flex-shrink-0 relative h-40"
                    >
                      <div
                        class="w-full h-full bg-gradient-to-b from-blue-100 to-blue-500"
                      />
                    </div>
                    <h2
                      class="my-4 mx-6 text-xl leading-7 font-semibold text-gray-900"
                    >
                      Test 2 →
                    </h2>
                  </div>
                </a>
              </div>
            </section>
            <div
              class="ps-sticky lg:ps-bottom-12 ps-bottom-4 ps-mt-10"
            />
          </div>
        </section>
      </div>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul />
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="mx-auto"
        >
          © 2023 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://pantheon.io/"
          >
            Pantheon Content Cloud
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PostTemplate /> > should render a post 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col overflow-x-hidden"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between max-w-screen-lg ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📑 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <div
        class="max-w-screen-lg mx-auto prose mt-16"
      >
        <div>
          <div>
            <div>
              <h1
                class="text-3xl font-bold md:text-4xl"
              >
                <span>
                  This is a title, there are many like it, but this one is mine
                </span>
              </h1>
              <p
                class="py-2"
              >
                Last Updated: January 1, 1970
              </p>
              <hr
                class="mt-6 mb-8"
              />
            </div>
          </div>
          <div>
            <h1>
              <span>
                This is h1
              </span>
            </h1>
            <h2>
              <span>
                This is h2
              </span>
            </h2>
            <h3>
              <span>
                This is h3
              </span>
            </h3>
            <h4>
              <span>
                This is h4
              </span>
            </h4>
            <h5>
              <span>
                This is h5
              </span>
            </h5>
            <h6>
              <span
                style="font-style: italic;"
              >
                This is h6
              </span>
            </h6>
            <p>
              <span />
            </p>
            <p>
              <span
                style="font-weight: bold;"
              >
                This is bold
              </span>
            </p>
            <p>
              <span
                style="font-style: italic;"
              >
                This is italic
              </span>
            </p>
            <p>
              <span
                style="text-decoration: underline;"
              >
                This is underlined
              </span>
            </p>
            <p>
              <span
                style="text-decoration: underline;"
              />
            </p>
            <p>
              <span
                style="vertical-align: super;"
              >
                aaa
              </span>
              <span
                style="font-weight: bold; font-style: italic; vertical-align: super; text-decoration: underline;"
              >
                This is bold, underlined, italic, strikethrough and supertext
              </span>
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                eee
              </span>
              <span
                style="font-weight: bold; font-style: italic; vertical-align: sub; text-decoration: underline;"
              >
                This is bold, underlined, italic, strikethrough and subscript
              </span>
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                horizontal line below:
              </span>
            </p>
            <hr />
            <p>
              <span
                style="vertical-align: sub;"
              />
            </p>
            <p>
              <span />
            </p>
            <p>
              <span>
                x
              </span>
              <span
                style="vertical-align: super;"
              >
                3
              </span>
            </p>
            <p>
              <span
                style="vertical-align: super;"
              />
            </p>
            <p>
              <span
                style="vertical-align: super;"
              >
                H
              </span>
              <span
                style="vertical-align: sub;"
              >
                2
              </span>
              <span
                style="vertical-align: super;"
              >
                O x
              </span>
              <span
                style="font-weight: bold; vertical-align: super;"
              >
                o
              </span>
            </p>
            <p>
              <span />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                Unordered “bullet point” list
              </span>
            </p>
            <ul>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Apple
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Pineapple
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Pen 
                </span>
                <span
                  style="font-weight: bold; vertical-align: sub;"
                >
                  pineapple
                </span>
                <span
                  style="vertical-align: sub;"
                >
                   
                </span>
                <span
                  style="font-style: italic; vertical-align: sub;"
                >
                  apple
                </span>
                <span
                  style="vertical-align: sub;"
                >
                   
                </span>
                <span
                  style="vertical-align: sub; text-decoration: underline;"
                >
                  pen
                </span>
              </li>
            </ul>
            <p>
              <span
                style="vertical-align: sub; text-decoration: underline;"
              />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                Unordered list with different symbols
              </span>
            </p>
            <ul>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Duck
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Duck2
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Goose
                </span>
              </li>
            </ul>
            <p>
              <span
                style="vertical-align: sub;"
              />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                Todo list with checkmarks
              </span>
            </p>
            <ul>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Veni
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Vidi
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Vici
                </span>
              </li>
            </ul>
            <p>
              <span
                style="vertical-align: sub; text-decoration: underline;"
              />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                Ordered “numbered” list
              </span>
            </p>
            <ol>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Waking in the morning
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Gotta go downstairs
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Gotta have cereal
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  I see my friends
                </span>
              </li>
              <li>
                <span
                  style="vertical-align: sub;"
                >
                  Gotta get down on Friday
                </span>
              </li>
            </ol>
            <p>
              <span
                style="vertical-align: sub;"
              />
            </p>
            <p>
              <span />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              />
            </p>
            <p>
              <span
                style="font-weight: bold; vertical-align: sub;"
              >
                A wild table appears
              </span>
            </p>
            <table
              class="text-black"
            >
              <tbody>
                <tr>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        Merged cols 1 & 2
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        Col 3
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        Col 4
                      </span>
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        A
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        B
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        C
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        D
                      </span>
                    </p>
                  </td>
                </tr>
                <tr>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        ა
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        ბ
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        ს
                      </span>
                    </p>
                  </td>
                  <td>
                    <p>
                      <span
                        style="vertical-align: sub;"
                      >
                        დ
                      </span>
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
            <p>
              <span
                style="vertical-align: sub;"
              />
            </p>
            <p>
              <span
                style="vertical-align: sub;"
              >
                Some more paragraphs after everything else.
              </span>
            </p>
            <p>
              <span />
            </p>
            <p>
              <span />
            </p>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul />
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="mx-auto"
        >
          © 2023 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://pantheon.io/"
          >
            Pantheon Content Cloud
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
